# Lomas

./: README.md  grbl settings.txt
docs/: README.md
docs/blog/: blog.md
gcode/: cultivation.gcode  seed.gcode
mini-lomas/firmware/Marlin/: Configuration.h  Marlin.ino.with_bootloader.mega.hex  pins.h
mini-lomas/gcode/: cultivation.g  seed.g
node-red/: Node-red Complete ROS.txt  Node-red Complete.txt  Node-red Machine.txt  Node-red Watering.txt
ros/: README.md
ros/LOMAS_ROS_pkg/: CMakeLists.txt  package.xml  setup.py
ros/LOMAS_ROS_pkg/scripts/: machine_node.py  machine_node_2.py  test.py  watering_node.py  watering_node_2.py
ros/lomas_ros_pkg/: package.xml  setup.py
ros/lomas_ros_pkg/launch/: complete.launch
ros/lomas_ros_pkg/lomas_ros_pkg/: gcodesender_test.py  machine_node_2.py  seq_generation_node.py  watering_node_2.py
ros/lomas_ros_pkg/msg/: watering_status.msg
ros/lomas_ros_pkg/msgfolder/: CMakeLists.txt  package.xml
ros/lomas_ros_pkg/msgfolder/msg/: MachineStatus.msg
ros/lomas_ros_pkg/scripts/: machine_node_2.py  seq_generation_node.py
ros/nodejs/gennodejs/ros/LOMAS_ROS_pkg/msg/: machine_command.js  machine_status.js  watering_command.js  watering_status.js
ros/nodejs/gennodejs/ros/lomas_ros_pkg/msg/: _index.js  machine_command.js  machine_status.js  watering_command.js  watering_status.js
tools/ap script RP3/: rPi3-ap-setup.sh
