<?xml version="1.0"?>
<package format="3">
  <name>lomas_ros_pkg</name>  <!-- Lowercase package name to follow convention -->
  <version>0.0.1</version>
  <description>The LOMAS_ROS_pkg package</description>
  <maintainer email="johan10_kurt@hotmail.com">Johan Kurt</maintainer>
  <license>Apache License 2.0</license>


  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies that are used both at build time and run time -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Package format 3 allows using <exec_depend> instead of <run_depend> for clearer semantics -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>msgfolder</exec_depend>
  <!-- This tells other tools and launch systems that this is a ROS 2 Python package -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
